libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__r#type__tests__parse_incomplete.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/type.rs
description: Parses with a sudden EOF
expression: "{\"#type\": "
---
[31m[lexer::lexer::unexpected-eof] Error:[0m Lexer
   ╭─[ <unknown>:1:11 ]
   │
 1 │ {"#type":
   │           │ 
   │           ╰─ Unexpected end of file, expected string
   │ 
   │ Help: The file ended where a value was expected. Add a valid JSON value (string, number, object, array, true, false, or null).
───╯
