libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__r#type__tests__parse_invalid_syntax.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/type.rs
description: Parses invalid syntax
expression: "{\"#type\": [\"a\"]}"
---
[31m[parser::object::type-expected-string] Error:[0m Parser
   ╭─[ <unknown>:1:11 ]
   │
 1 │ {"#type": ["a"]}
   │           ┬  
   │           ╰── Invalid type specification
   │ 
   │ Help: Found `[`, which is not a valid type specification. Types must be represented as a string.
   │ 
   │ Note: Types in J-Expr must be specified through an embedded language represented in a string that mimics that of Rust and TypeScript. See the language documentation for more details.
───╯
