libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__r#type__tests__parse_invalid_type.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/type.rs
description: Parses an invalid type
expression: "{\"#type\": \"\"}"
---
[31m[parser::string::invalid-expression] Error:[0m Invalid string expression
   ╭─[ <unknown>:1:11 ]
   │
 1 │ {"#type": ""}
   │           │ 
   │           ╰─ Invalid type
───╯
